[gd_scene load_steps=2 format=3 uid="uid://contract_card"]

[ext_resource type="Script" path="res://scripts/hub/contract_card.gd" id="1_script"]

[node name="ContractCard" type="PanelContainer"]
custom_minimum_size = Vector2(300, 150)
offset_right = 300.0
offset_bottom = 150.0
mouse_default_cursor_shape = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ContractName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "CONTRACT NAME"

[node name="BriefDescription" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Brief description of the contract that may span multiple lines..."
autowrap_mode = 2
text_overrun_behavior = 3

[node name="FooterRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RewardDisplay" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FooterRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="GoldIcon" type="Label" parent="MarginContainer/VBoxContainer/FooterRow/RewardDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945, 0.769, 0.059, 1)
theme_override_font_sizes/font_size = 14
text = "GOLD:"

[node name="GoldAmount" type="Label" parent="MarginContainer/VBoxContainer/FooterRow/RewardDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945, 0.769, 0.059, 1)
theme_override_font_sizes/font_size = 14
text = "300g"

[node name="DifficultyStars" type="Label" parent="MarginContainer/VBoxContainer/FooterRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "★★☆"
horizontal_alignment = 2
